--- a/src/components/List/Item/Item.module.scss
+++ b/src/components/List/Item/Item.module.scss
@@ -1,7 +1,7 @@
 .item {
-  background-color: #4D4D4D;
+  background-color: #4d4d4d;
   border-radius: 8px;
-  box-shadow: 2px 4px 4px #0000009F;
+  box-shadow: 2px 4px 4px #0000009f;
   padding: 12px;
   margin-bottom: 8px;
   position: relative;
@@ -13,22 +13,22 @@
   }
 
   span {
-    color: #D0D0D0;
+    color: #d0d0d0;
   }
 
-  @media screen and (min-width:1280px) {
+  @media screen and (min-width: 1280px) {
     font-size: 1.8rem;
   }
 }
 
 .itemSelecionado {
   background-color: #292929;
-  box-shadow: 2px 4px 4px #0000009F inset;
+  box-shadow: 2px 4px 4px #0000009f inset;
 }
 
 .itemCompletado {
-  background-color: #566F42;
-  cursor: auto;
+  background-color: #566f42;
+  cursor: not-allowed;
 
   .concluido {
     display: block;
